# botmanager

./: .env  .env.example  Dockerfile  LICENSE  README.md  archivos.json  archivos.json.backup  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  users.json
app/: .env  config.py  main.py  users.json
app/bot/: bot_manager.py
app/data/: services_data.py
app/models/: user.py  webhook.py
app/services/: autopinger.py  database.py  imei_checker.py  imei_validator.py  response_formatter.py
