# pyproject.toml
[tool.poetry]
name = "telegram-imei-bot"
version = "0.1.0"
description = "Telegram IMEI Checker Bot with FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
aiogram = "^3.2.0"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
asyncio-mqtt = "^0.11.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false